Refactorización de proyecto. Agregado comentarios y anotaciones OpenApi. Cambios menores. Agregado control de excepciones especificas.
